tests/valid/enum/generic_constructor.facet
enum Slot<T> {
  Full(unrestricted T),
  Empty
}

fn full(x: unrestricted isize) -> unrestricted Slot<unrestricted isize> {
  Slot<unrestricted isize>::Full(x)
}
