tests/invalid/function/duplicate_param_name.facet
fn f(x: unrestricted isize, x: unrestricted isize) -> unrestricted isize {
  x
}
